src/compiler/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Promotions.Shell/content/Controllers/PromotionsController.cs.pp
using System.Web.Mvc;

namespace $rootnamespace$.Controllers
{
    public partial class PromotionsController : Controller
    {
        // GET: /Promotions/
        public ActionResult Index()
        {
            return View();
        }

    }
}
